# cosc4315hw2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/mypython/: ast.hpp  term.hpp
include/mypython/code/: ast.hpp
src/: CMakeLists.txt
src/mypython/: ast.cpp  term.cpp
src/mypython/code/: ast.cpp
src/util/: variant.hpp
test/: CMakeLists.txt
test/mypython/: ast_test.cpp
test/mypython/code/: ast_test.cpp
